# came

./: .gitignore  LICENSE  Pipfile  README.md  setup.cfg
src/came/: __init__.py  abstracts.py  attribute.py  controller.py  crop.py  droidcam.py  mixin.py  processor.py  webcam.py
