[metadata]
name = cam_sun
version = 0.0.1
description = camera wrapper library
author = northfield.t
author_email = northfield.t@outlook.com
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url =
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7

[options]
include_package_data = True
package_dir= =src
packages = find:
install_requires =
  opencv-python

[options.packages.find]
where=src